syntax = "proto3";
package YouYou.Proto;

//Vector3
message Vector3
{
	float x = 1;//
	float y = 2;//
	float z = 3;//
}

//角色类型
enum RoleType
{
	Player = 0; //玩家
	Monster = 1; //怪
}

enum LeaveSceneLineType
{
	Normal = 0; //普通
	Die = 1; //死亡
}