syntax = "proto3";

import "Proto_Common.proto";
package YouYou.Proto;

//服务器返回进入场景申请[c#]
message GS2C_ReturnEnterScene_Apply
{
    int32 SceneId = 1;//场景编号
	bool Result = 2;//是否可以进入
	Vector3 CurrPos = 3;//坐标
	float RotationY = 4;//旋转
}

//服务器返回场景线中角色列表消息[c#]
message WS2C_SceneLineRole_DATA
{
	RoleType RoleType = 1;//角色类型
	int64 RoleId = 2;//角色编号
	int32 BaseRoleId = 3;//基础角色编号职业id或者怪id
	int32 Sex = 4;//性别
	string NickName = 5;//昵称
	int32 Level = 6;//等级
	Vector3 CurrPos = 7;//坐标
	float RotationY = 8;//旋转
	int32 Status = 9;//状态
	int32 CurrHP = 10;//当前HP
	int32 MaxHP = 11;//最大HP
	int32 CurrMP = 12;//当前MP
	int32 MaxMP = 13;//最大MP
}
	
//服务器返回场景线中角色列表消息[c#]
message GS2C_ReturnSceneLineRoleList
{
	repeated WS2C_SceneLineRole_DATA RoleList = 1;//角色列表
}

//服务器返回角色进入场景线消息[c#]
message GS2C_ReturnRoleEnterSceneLine
{
	repeated WS2C_SceneLineRole_DATA RoleList = 1;//角色列表
}

//服务器返回角色离开场景线消息[c#]
message GS2C_ReturnRoleLeaveSceneLine
{
	repeated int64 RoleIdList = 1;//角色编号列表
}